# winnow

./: .gitignore  README.md  example_pipeline.py  pyproject.toml
architecture/: implementation-plan.md  operations-runbook.md  winnow-architecture.md
src/winnow/: __init__.py  __main__.py
src/winnow/annotation/: __init__.py  orchestrator.py  schema.py
src/winnow/annotation/adapters/: __init__.py  d_fine.py  sam2.py
src/winnow/cli/: app.py  commands_export.py  commands_gateway.py  commands_inspect.py  commands_run.py  commands_submit.py
src/winnow/config/: __init__.py  loader.py  profiles.py  schema.py
src/winnow/export/: __init__.py  coco.py  yolo.py
src/winnow/gateway/: __init__.py  control.py  daemon.py  scheduler.py  service_install.py  tui.py  tui_app.py  tui_data.py  tui_models.py  tui_screens.py  tui_utils.py
src/winnow/ingest/: __init__.py  scanner.py  sequence.py
src/winnow/metrics/: __init__.py  blur.py  darkness.py  duplicates.py  idle.py
src/winnow/observability/: logging.py  metrics.py
src/winnow/pipeline/: __init__.py  dag.py  executor.py  registry.py  stage.py
src/winnow/storage/: __init__.py  artifacts.py  atomic.py  checkpoints.py  events.py  queue.py  snapshots.py  state_store.py
src/winnow/workers/: __init__.py  gpu_runner.py  pool.py  task_runner.py
