[project]
name = "winnow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gijs de Jong", email = "berichtaangijs@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.3.3",
    "pillow>=11.3.0",
    "tyro>=1.0.6",
]

[project.scripts]
winnow = "winnow:main"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"
